--- a/package.json
+++ b/package.json
@@ -4,10 +4,29 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nx/devkit": "18.3.3",
+    "@nx/plugin": "^18.3.3",
+    "tslib": "^2.3.0",
+    "vite": "^5.2.10"
+  },
   "devDependencies": {
+    "@nx/eslint": "18.3.3",
+    "@nx/eslint-plugin": "18.3.3",
+    "@nx/jest": "18.3.3",
     "@nx/js": "18.3.3",
     "@nx/workspace": "18.3.3",
-    "nx": "18.3.3"
+    "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "nx": "18.3.3",
+    "prettier": "^2.6.2",
+    "typescript": "~5.4.2"
   }
 }
