--- a/scripts/plugins/vitest/package.json
+++ b/scripts/plugins/vitest/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "dependencies": {
     "tslib": "^2.3.0",
-    "vite": "^5.2.10"
+    "vite": "^5.2.10",
+    "@nx/js": "18.3.3",
+    "@nx/devkit": "18.3.3",
+    "nx": "18.3.3"
   },
   "type": "commonjs",
   "main": "./src/index.js",
